[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simplenet"
version = "0.1.0a1"
description = "Python implementation of the TAMU DC modified-Ward network reduction toolbox"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Chris R. Vernon", email = "chris.vernon@pnnl.gov" },
    { name = "Kerem Akdemier", email = "kerem.akdemier@pnnl.gov" },
    { name = "Jingwei Qian", email = "jqian4@ncsu.edu" }
]
keywords = [
    "power-systems",
    "network-reduction",
    "ward-reduction",
    "kron-reduction",
    "matpower",
    "dc-power-flow",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "ruff>=0.5",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
    "pymdown-extensions>=10.7",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
]

[project.scripts]
simplenet = "simplenet.cli:main"

[project.urls]
Homepage = "https://github.com/IMMM-SFA/simplenet"
Source = "https://github.com/IMMM-SFA/simplenet"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]
